--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
           </li>
           <li class="item-container">
               <div class="menu-vertical-segment"></div>
-              <a href="#">SZUKAJ</a>
+              <div class="right-top-corner">
+                <a href="#">SZUKAJ</a>
+                <div class="menu-horizontal-segment"></div>
+              </div> 
           </li>  
         </ul>
       </nav>
