Pagination and first foto set in the intro section...

--- a/index.html
+++ b/index.html
@@ -60,6 +60,44 @@
   </header>
 
   <section class="page-section intro-section">
+    <header class="section-header">
+      <row>
+        <div class="col-1"></div>
+        <div class="col-5">
+          <div class="pagination-container">
+            <row>
+              <div class="pagination-no active-no">
+                01.
+              </div>
+              <div class="pagination-line active-line">
+              </div>  
+            </row>
+            <row>
+              <div class="pagination-no">
+                02.
+              </div>
+              <div class="pagination-line">
+              </div> 
+            </row>
+            <row>
+              <div class="pagination-no">
+                03.
+              </div>
+              <div class="pagination-line">
+              </div> 
+            </row>
+          </div>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-5" class="face-front-container">
+          <img src="./img/wycieta4.png" alt="obrazek" class="face-front">
+        </div>
+
+      </row>
+    </header>
+  </section>
+
+  <section class="page-section intro-section">
 
   </section>
 
