--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <header class="page-header">
     <div class="row">
       <div class="col-2"></div>
-      <a class="brand col-2" href="#">
+      <a class="col-2 brand" href="#">
         <img src="img/vector-smart-object-copy.png" alt="Company logo">
       </a>
       <div class="col-5"></div>
-      <nav>
-        <ul class="col-15 menu-items">
+      <nav class="col-15">
+        <ul class="menu-items">
           <li class="item-container">
               <div class="menu-vertical-segment act"></div>
               <a href="#" class="active">HOME</a>
@@ -61,39 +61,52 @@
 
   <section class="page-section intro-section">
     <header class="section-header">
-      <row>
+      <div class="row section-header-first-row">
         <div class="col-1"></div>
         <div class="col-5">
           <div class="pagination-container">
-            <row>
+            <div class="row">
               <div class="pagination-no active-no">
                 01.
               </div>
               <div class="pagination-line active-line">
               </div>  
-            </row>
-            <row>
+            </div>
+            <div class="row">
               <div class="pagination-no">
                 02.
               </div>
               <div class="pagination-line">
               </div> 
-            </row>
-            <row>
+            </div>
+            <div class="row">
               <div class="pagination-no">
                 03.
               </div>
               <div class="pagination-line">
               </div> 
-            </row>
+            </div>
           </div>
         </div>
         <div class="col-4"></div>
-        <div class="col-5" class="face-front-container">
+        <div class="col-5 face-front-container">
           <img src="./img/wycieta4.png" alt="obrazek" class="face-front">
         </div>
-
-      </row>
+        <div class="col-9" class="face-left-container">
+          <img src="./img/wycieta.png" alt="obrazek" class="face-left">
+        </div>
+      </div>
+      <div class=" row section-header-second-row">
+        <div class="col-2"></div>
+        <div class="col-8 main-heading-container">
+          <h1 class="main-heading">LOREM IPSUM DOLOR SIT AMET</h1>
+        </div>
+        <div class="col-2"></div>
+        <div class="col-6">
+          <img src="./img/shape-1-copy-2.png" alt="obrazek" class="pale-diagonal">
+        </div>
+        <div class="col-6"></div>
+      </div>
     </header>
   </section>
 
