Third row pictures added in the intro section..

--- a/index.html
+++ b/index.html
@@ -90,22 +90,32 @@
         </div>
         <div class="col-4"></div>
         <div class="col-5 face-front-container">
-          <img src="./img/wycieta4.png" alt="obrazek" class="face-front">
+          <img src="./img/wycieta4.png" alt="a picture" class="face-front">
         </div>
-        <div class="col-9" class="face-left-container">
-          <img src="./img/wycieta.png" alt="obrazek" class="face-left">
+        <div class="col-9 face-left-container">
+          <img src="./img/wycieta.png" alt="a picture" class="face-left">
         </div>
       </div>
-      <div class=" row section-header-second-row">
+      <div class="row section-header-second-row">
         <div class="col-2"></div>
         <div class="col-8 main-heading-container">
           <h1 class="main-heading">LOREM IPSUM DOLOR SIT AMET</h1>
         </div>
         <div class="col-2"></div>
         <div class="col-6">
-          <img src="./img/shape-1-copy-2.png" alt="obrazek" class="pale-diagonal">
+          <img src="./img/shape-1-copy-2.png" alt="a picture" class="pale-diagonal">
         </div>
         <div class="col-6"></div>
+      </div>
+      <div class="row section-header-third-row">
+        <div class="col-2"></div>
+        <div class="col-8">
+          <h2 class="submain-heading">SED UT PERSPICIATIS UNDE OMNIS ISTE</h2>
+        </div>
+        <div class="col-14">
+          <img src="./img/banner.png" alt="a picture" class="banner">
+        </div>
+
       </div>
     </header>
   </section>
