Next row pictures added in the intro section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="col-2"></div>
         <div class="col-6">
-          <img src="./img/shape-1-copy-2.png" alt="a picture" class="pale-diagonal">
+          <img src="./img/shape-1-copy-2.png" alt="a picture" class="pale-diagonal-top">
         </div>
         <div class="col-6"></div>
       </div>
@@ -115,7 +115,20 @@
         <div class="col-14">
           <img src="./img/banner.png" alt="a picture" class="banner">
         </div>
-
+      </div>
+      <div class="row section-header-fourth-row">
+            <div class="col-6">
+                <img src="./img/part1-particles-left-top.png" alt="a picture" class="particles">
+              </div>
+              <div class="col-6 face-right-container">
+                <img src="./img/wycieta-2.png" alt="a picture" class="face-right">
+              </div>
+              <div class="col-6">
+                <img src="./img/shape-1-copy-2.png" alt="a picture" class="pale-diagonal-left">
+              </div>
+              <div class="col-6">
+                <img src="./img/shape-1-copy-2.png" alt="a picture" class="pale-diagonal-right">
+              </div>
       </div>
     </header>
   </section>
